Yet more cleanup: Removed out of data docs, neatened up examples, added separate examples.xml ant script (just for the prebuilt distro)