@@ -6,16 +6,15 @@ Build file for OpenSextantToolbox.
 	<!-- include properties -->
 	<property file="build.properties" />
 
-	<property name="version" value="2.0" />
-
-	<!-- Name of the project -->
+	<!-- Project level properties -->
 	<property name="project.name" value="OpenSextantToolbox" />
+	<property name="version" value="2.0" />
 	<property name="java_level" value="1.6" />
 
 	<!-- Source directory - contains the Java source files for this project -->
 	<property name="src.dir" location="src" />
 
-	<!-- directory to contain the jar -->
+	<!-- directory to contain the created jars -->
 	<property name="build.dir" location="build" />
 
 	<!-- documentation directories -->
@@ -46,12 +45,14 @@ Build file for OpenSextantToolbox.
 		<fileset dir="${lib.dir}/GATE" includes="**/*.jar" />
 		<fileset dir="${lib.dir}/Solr" includes="**/*.jar" />
 		<fileset dir="${lib.dir}/Plugin" includes="**/*.jar" />
+		<fileset dir="${lib.dir}/Logging" includes="**/*.jar" />
 	</path>
 
 	<!-- Classpath to run solr gazetteer loader -->
 	<path id="solr.runtime.classpath">
 		<fileset dir="${lib.dir}/Solr" includes="**/*.jar" />
-		<fileset file="${lib.dir}/log4j.properties" />
+		<fileset dir="${lib.dir}/Logging" includes="**/*.jar" />
+		<!--fileset file="${lib.dir}/log4j.properties" /-->
 	</path>
 
 	<!-- Properties for creating/loading the Solr gazetteer -->
@@ -59,29 +60,43 @@ Build file for OpenSextantToolbox.
 	<property name="csv" value="${resources.home}/resources/geoGazetteer/MergedGazetteer.txt" />
 	<property name="solr.home" location="${basedir}/build/Gazetteer/solr" />
 
-	<!-- Properties for test examples -->
-	
-	<!-- Classpath to run test examples -->
+	<!-- Properties for example code -->
+
+	<!-- Classpath to run example code -->
 	<path id="examples.runtime.classpath">
 		<fileset dir="${release.dir}/lib" includes="**/*.jar" />
 		<fileset dir="${release.dir}/lib/GATE" includes="**/*.jar" />
 		<fileset dir="${release.dir}/lib/Solr" includes="**/*.jar" />
+		<fileset dir="${release.dir}/lib/Logging" includes="**/*.jar" />
 		<fileset file="${release.dir}/etc/log4j.properties" />
 	</path>
-	
 
+	<!-- classpath to run the components that don't need Gate -->
 	<path id="examples.runtime.standalone.classpath">
 		<fileset dir="${release.dir}/lib" includes="**/*.jar" />
 		<fileset dir="${release.dir}/lib/Solr" includes="**/*.jar" />
+		<fileset dir="${release.dir}/lib/Logging" includes="**/*.jar" />
 		<fileset file="${release.dir}/etc/log4j.properties" />
 	</path>
-	
-	
-	<!--property name="test.input" location="${release.dir}/test/testDocs" /-->
-	<property name="test.input" location="${resources.home}/testData/TestDocs" />
-	<property name="test.app.geotagger" location="${release.dir}/LanguageResources/GAPPs/OpenSextant_geotagger.gapp" />
-	<property name="test.app.generalPurpose" location="${release.dir}/LanguageResources/GAPPs/OpenSextant_GeneralPurpose.gapp" />
 
+
+	<!-- location of the test data -->
+	<property name="test.testdocs.dir" location="${release.dir}/LanguageResources/testData/TestDocs" />
+	<property name="test.matcher.file" location="${release.dir}/LanguageResources/testData/MatcherTestData/matcherTest.txt" />
+	<property name="test.dateTest.file" location="${release.dir}/LanguageResources/testData/RegexTestData/dateTime_test.csv" />
+	<property name="test.geoTest.file" location="${release.dir}/LanguageResources/testData/RegexTestData/geocoord_test.csv" />
+	
+	
+	<!-- location of the GAPP and pattern files -->
+	<property name="test.gapp.geotagger" location="${release.dir}/LanguageResources/GAPPs/OpenSextant_geotagger.gapp" />
+	<property name="test.gapp.generalPurpose" location="${release.dir}/LanguageResources/GAPPs/OpenSextant_GeneralPurpose.gapp" />
+
+	<property name="test.patterns.date" location="${release.dir}/LanguageResources/resources/patterns/datetime_patterns2.cfg" />
+	<property name="test.patterns.geo" location="${release.dir}/LanguageResources/resources/patterns/geocoord_regex.cfg" />
+
+	<property name="test.patterns.results" location="${release.dir}/LanguageResources/TestData/results" />
+
+	
 
 	<!-- Properties for local GATE install -->
 	<property name="toolbox.plugin.dir" location="${gate.home}/plugins/OpenSextantToolbox" />
@@ -92,7 +107,8 @@ Build file for OpenSextantToolbox.
 		<mkdir dir="${build.dir}" />
 	</target>
 
-	<!-- clean up created jars,retrieved dependencies,javadocs and previous releases-->
+	<!-- delete created jars,retrieved dependencies,javadocs and previous releases-->
+	<!-- NOTE: this leaves the created Gazetteer (see clean.gaz target) -->
 	<target name="clean" depends="setup">
 		<delete includeEmptyDirs="true">
 			<fileset dir="${build.dir}" excludes="Gazetteer/**" />
@@ -108,6 +124,8 @@ Build file for OpenSextantToolbox.
 		<mkdir dir="${javadoc.dir}" />
 	</target>
 
+	<!-- delete the created Solr gazetteer -->
+	<!-- NOTE: creating (loading) the gazetteer takes a while so don't delete if even mildly impatient -->
 	<target name="clean.gaz" depends="setup">
 		<delete includeEmptyDirs="true">
 			<fileset dir="${build.dir}" includes="Gazetteer/**" />
@@ -119,14 +137,16 @@ Build file for OpenSextantToolbox.
 	<target name="clean.ivy.cache" depends="clean">
 		<ivy:cleancache />
 	</target>
-	
+
+	<!-- set the proxy if behind a firewall (needed for ivy) -->
 	<target name="setProxy">
-	    <setproxy proxyhost="${proxy.host}" proxyport="${proxy.port}" />
+		<setproxy proxyhost="${proxy.host}" proxyport="${proxy.port}" />
 	</target>
-	
+
 	<!-- get all the ivy defined dependencies -->
-	<target name="resolve" depends="clean" description="--> resolve and retrieve dependencies with ivy">
+	<target name="resolve" depends="setProxy,clean" description="--> resolve and retrieve dependencies with ivy">
 		<ivy:retrieve pattern="${ivy.lib.dir}/[conf]/[artifact].[ext]" />
+		<ivy:report todir="${build.dir}/ivy-report" graph="false"/>
 	</target>
 
 	<!-- get the one jar which is not resolved via Ivy -->
@@ -134,8 +154,9 @@ Build file for OpenSextantToolbox.
 		<copy todir="${lib.dir}\Plugin" file="${externals.dir}\JITAR.jar" />
 	</target>
 
+	<!-- get all of our dependencies -->
 	<target name="get.dependencies" depends="resolve,copy.orphan" />
-	
+
 	<!-- compile the source  -->
 	<target name="compile" depends="setup,get.dependencies">
 		<javac classpathref="compile.classpath" srcdir="${src.dir}" destdir="${build.dir}" debug="true" debuglevel="lines,source" source="${java_level}" encoding="utf-8" />
@@ -143,13 +164,13 @@ Build file for OpenSextantToolbox.
 
 	<!-- create the JAR files -->
 	<target name="jar" depends="compile">
-		
+
 		<jar destfile="${core.jar.location}" update="false" basedir="${build.dir}">
 			<include name="org/opensextant/**" />
 			<exclude name="org/opensextant/toolbox/**" />
 			<exclude name="org/opensextant/examples/**" />
 		</jar>
-		
+
 		<jar destfile="${toolbox.jar.location}" update="false" basedir="${build.dir}">
 			<include name="org/opensextant/toolbox/**" />
 		</jar>
@@ -157,14 +178,13 @@ Build file for OpenSextantToolbox.
 		<jar destfile="${phonetics.jar.location}" update="false" basedir="${build.dir}">
 			<include name="org/opensextant/phonetic/**" />
 		</jar>
-		
+
+		<!-- include source for examples in jar -->
 		<jar destfile="${examples.jar.location}" update="false" basedir="${build.dir}">
 			<include name="org/opensextant/examples/**" />
-			<fileset dir="${src.dir}" includes="org/opensextant/examples/*.java"/>
-		</jar>	
-		
-		
-		
+			<fileset dir="${src.dir}" includes="org/opensextant/examples/*.java" />
+		</jar>
+
 	</target>
 
 	<!-- Build and populate the Solr gazetteer -->
@@ -172,10 +192,9 @@ Build file for OpenSextantToolbox.
 		<antcall target="clean.gaz" />
 		<antcall target="create.solr.home" />
 		<antcall target="load.gazetteer" />
-		<!--antcall target="build.fst" /-->
 	</target>
 
-
+	<!-- create the empty solr home directory -->
 	<target name="create.solr.home">
 		<mkdir dir="${solr.home}" />
 		<mkdir dir="${solr.home}/gazetteer" />
@@ -194,25 +213,17 @@ Build file for OpenSextantToolbox.
 		</copy>
 	</target>
 
+	<!-- Load the gazetteer data into Solr -->
+	<!-- NOTE: this is the step that takes a long time -->
 	<target name="load.gazetteer">
 		<java classname="org.opensextant.solrtexttagger.EmbeddedSolrUpdater" classpathref="solr.runtime.classpath" fork="yes" dir="${basedir}">
 			<jvmarg value="-Xmx3G" />
 			<!-- This MaxPermSize appears to be helpful for loading numerous JARs -->
 			<jvmarg value="-XX:MaxPermSize=256m" />
+			<jvmarg value="-Dlog4j.configuration=file:${basedir}/etc/log4j.properties" />
 			<jvmarg value="-Dsolr.solr.home=${solr.home}" />
 			<arg value="--input=${csv}" />
 			<arg value="/update?update.contentType=text/csv&amp;skipLines=1&amp;optimize=true&amp;separator=%09&amp;header=false&amp;trim=on&amp;overwrite=false&amp;fieldnames=${fieldnames}" />
-		</java>
-	</target>
-
-	<!-- 2 GB to build current gazetteer with 13 million rows -->
-	<target name="build.fst">
-		<java classname="org.opensextant.solrtexttagger.EmbeddedSolrUpdater" classpathref="solr.runtime.classpath" fork="yes" dir="${basedir}">
-			<jvmarg value="-Xmx3G" />
-			<!-- This MaxPermSize appears to be helpful for loading numerous JARs -->
-			<jvmarg value="-XX:MaxPermSize=256m" />
-			<jvmarg value="-Dsolr.solr.home=${solr.home}" />
-			<arg value="/tag?build=true" />
 		</java>
 	</target>
 
@@ -231,12 +242,12 @@ Build file for OpenSextantToolbox.
 		</javadoc>
 	</target>
 
-	<!-- Build the jars and jar dependencies.  -->
+	<!-- Main target: Build the whole thing (except for loading the gazetteer -->
 	<target name="build" depends="jar" />
 
-	<!-- Build the jars and jar dependencies and the gazetteer (which takes a while  -->
+	<!-- Build the jars and load the gazetteer (which takes a while)  -->
 	<target name="buildWithGaz" depends="jar,build.gaz" />
-	
+
 	<!-- create release directory structure -->
 	<target name="release.prepare">
 		<delete dir="${release.dir}" />
@@ -247,20 +258,19 @@ Build file for OpenSextantToolbox.
 		<mkdir dir="${release.dir}/LanguageResources" />
 		<mkdir dir="${release.dir}/Gazetteer" />
 		<mkdir dir="${release.dir}/etc" />
-		<mkdir dir="${release.dir}/testData" />
+		<mkdir dir="${release.dir}/examples" />
 	</target>
-
 
 	<!-- copy over jars to the release directory -->
 	<target name="release.libs" depends="">
 
 		<copy todir="${release.dir}/lib">
-			<fileset file="${core.jar.location}"/>
-			<fileset file="${phonetics.jar.location}"/>
-			<fileset file="${examples.jar.location}"/>
-			<fileset dir="${basedir}/lib/Plugin"/>
+			<fileset file="${core.jar.location}" />
+			<fileset file="${phonetics.jar.location}" />
+			<fileset file="${examples.jar.location}" />
+			<fileset dir="${basedir}/lib/Plugin" />
 		</copy>
-	
+
 		<copy todir="${release.dir}/lib/solr">
 			<fileset dir="${basedir}/lib/solr">
 				<include name="*.jar" />
@@ -273,10 +283,11 @@ Build file for OpenSextantToolbox.
 			</fileset>
 		</copy>
 
-		
-		
-		
-		
+		<copy todir="${release.dir}/lib/Logging">
+			<fileset dir="${basedir}/lib/Logging">
+				<include name="*.jar" />
+			</fileset>
+		</copy>
 		
 		
 	</target>
@@ -307,11 +318,13 @@ Build file for OpenSextantToolbox.
 		</copy>
 	</target>
 
-	<!-- Copy over the shell scripts, configuration, and basic test data -->
+	<!-- Copy over the some misc config stuff -->
 	<target name="release.misc">
 		<copy todir="${release.dir}/etc" file="${basedir}/etc/log4j.properties" />
 		<copy todir="${release.dir}" file="${basedir}/gate/gate.xml" />
 		<copy todir="${release.dir}" file="${basedir}/gate/user-gate.xml" />
+		<copy todir="${release.dir}" file="${basedir}/examples.xml" />
+		<copy todir="${release.dir}" file="${doc.dir}/README_DISTRO.txt" />
 	</target>
 
 	<!-- Copy the gaz to the release folder-->
@@ -321,7 +334,15 @@ Build file for OpenSextantToolbox.
 		</copy>
 	</target>
 
-
+	<!-- Copy the source for the examples to the release folder-->
+	<target name="release.examples.src">
+		<copy todir="${release.dir}/examples">
+			<fileset dir="${src.dir}/org/opensextant/examples" />
+		</copy>
+	</target>
+	
+	
+	
 	<!-- Build a full release in the "release" directory -->
 	<target name="release" depends="build">
 		<antcall target="release.prepare" />
@@ -329,23 +350,22 @@ Build file for OpenSextantToolbox.
 		<antcall target="release.plugin" />
 		<antcall target="release.resources" />
 		<antcall target="release.gaz" />
+		<antcall target="release.examples.src" />
 		<antcall target="release.misc" />
 	</target>
 
 
-<!-- the following three targets asssume a release has been built but doesnt trigger one if it is not -->	
-	
-	<!-- zip and post the generated release -->
-	<target name="post">
-		<!-- zip up the finished release -->
-		<zip destfile="${basedir}/opensextant-toolbox-${version}.zip" basedir = "${basedir}" >
-			<fileset  dir ="${release.dir}" ></fileset>
-		</zip>
+	<!-- the following three targets asssume a release has been built but doesn't trigger one if it is not -->
 
-		<!--
-		<zip destfile="${basedir}/opensextant-toolbox-gazetteer-${version}.zip" basedir="${release.dir}/Gazetteer">
-		</zip>
-		-->
+	<!-- zip and post the generated release to the distro site -->
+	<target name="post" depends = "release">
+		<!-- delete existing release zip -->
+		<delete file="${basedir}/opensextant-toolbox-${version}.zip" />
+		
+		<!-- zip up the finished release -->
+		<zip destfile="${basedir}/opensextant-toolbox-${version}.zip">
+			<zipfileset dir="${release.dir}" prefix="opensextant-toolbox-${version}"/>
+			</zip>
 		
 		<!--
 		<ftp server="${post.site}" remotedir="${post.dir}" userid="${post.user}" password="${post.password}">
@@ -353,40 +373,85 @@ Build file for OpenSextantToolbox.
 		</ftp>
 		-->
 	</target>
-	
-	<!-- run some simple examples --> 
+
+	<!-- run some simple examples -->
 	<target name="run.examples">
-		
-		<!-- run the geotagger -->
-		
+
+		<echo>-----------------------------------------------</echo>
+		<echo>Running the Geotagger Example</echo>
+		<echo>-----------------------------------------------</echo>
+		<!-- run the geotagger example-->
 		<java classname="org.opensextant.examples.GeotaggerExample" classpathref="examples.runtime.classpath" fork="yes" dir="${basedir}">
 			<jvmarg value="-Xmx2G" />
 			<jvmarg value="-Dgate.home=${release.dir}" />
-			<env key="solr.home" value="${release.dir}\Gazetteer\solr"/>
-			<arg value="${test.app.geotagger}" />
-			<arg value="${test.input}" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<env key="solr.home" value="${release.dir}\Gazetteer\solr" />
+			<arg value="${test.gapp.geotagger}" />
+			<arg value="${test.testdocs.dir}" />
 		</java>
-	
-		<!-- run the general purpose tagger -->
-	
+
+		<echo>-------------------------------------------------------------------------------</echo>
+		<echo>Running the General Purpose Entity Extractor Example</echo>
+		<echo>-------------------------------------------------------------------------------</echo>
+		<!-- run the general purpose tagger example-->
 		<java classname="org.opensextant.examples.GeneralPurposeTaggerExample" classpathref="examples.runtime.classpath" fork="yes" dir="${basedir}">
 			<jvmarg value="-Xmx2G" />
 			<jvmarg value="-Dgate.home=${release.dir}" />
-			<env key="solr.home" value="${release.dir}\Gazetteer\solr"/>
-			<arg value="${test.app.generalPurpose}" />
-			<arg value="${test.input}" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<env key="solr.home" value="${release.dir}\Gazetteer\solr" />
+			<arg value="${test.gapp.generalPurpose}" />
+			<arg value="${test.testdocs.dir}" />
 		</java>
 
-	<!-- run the matcher test -->
-	<!--		
-	<java classname="org.opensextant.examples.MatcherTest" classpathref="examples.runtime.standalone.classpath" fork="yes" dir="${basedir}">
-		<jvmarg value="-Xmx500M" />
-		<arg value="${release.dir}\Gazetteer\solr" />
-	</java>
-	-->	
+		<echo>--------------------------------------------------</echo>
+		<echo>Running the Solr Matcher Example</echo>
+		<echo>--------------------------------------------------</echo>
+		<!-- run the matcher example -->
+		<java classname="org.opensextant.examples.MatcherTest" classpathref="examples.runtime.standalone.classpath" fork="yes" dir="${basedir}">
+			<jvmarg value="-Xmx500M" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<env key="solr.home" value="${release.dir}\Gazetteer\solr" />
+			<!--arg value="${release.dir}\Gazetteer\solr" /-->
+			<arg value="${test.matcher.file}" />
+		</java>
+
+		<echo>--------------------------------------------------</echo>
+		<echo>Running the Solr Searcher Example</echo>
+		<echo>--------------------------------------------------</echo>
+		<!-- run the searcher example -->
+		<java classname="org.opensextant.examples.SearcherTest" classpathref="examples.runtime.standalone.classpath" fork="yes" dir="${basedir}">
+			<jvmarg value="-Xmx500M" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<env key="solr.home" value="${release.dir}\Gazetteer\solr" />
+			<!--arg value="${release.dir}\Gazetteer\solr" /-->
+		</java>
 		
-</target>
-	
+		<echo>--------------------------------------------------</echo>
+		<echo>Running the Date Regex Matcher Example</echo>
+		<echo>--------------------------------------------------</echo>
+		<!-- run the date regex example -->
+		<java classname="org.opensextant.examples.RegexTest" classpathref="examples.runtime.standalone.classpath" fork="yes" dir="${basedir}">
+			<jvmarg value="-Xmx500M" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<arg value="${test.dateTest.file}" />
+			<arg value="${test.patterns.date}" />
+			<arg value="${test.patterns.results}/dateResults.txt" />
+		</java>
+		
+		<echo>--------------------------------------------------</echo>
+		<echo>Running the Geocoord Regex Matcher Example</echo>
+		<echo>--------------------------------------------------</echo>
+		<!-- run the geocoord regex example -->
+		<java classname="org.opensextant.examples.RegexTest" classpathref="examples.runtime.standalone.classpath" fork="yes" dir="${basedir}">
+			<jvmarg value="-Xmx500M" />
+			<jvmarg value="-Dlog4j.configuration=file:${release.dir}/etc/log4j.properties" />
+			<arg value="${test.geoTest.file}" />
+			<arg value="${test.patterns.geo}" />
+			<arg value="${test.patterns.results}/geoResults.txt" />
+		</java>
+		
+	</target>
+
 	<!-- deploy OpenSextantToolbox to a local GATE installation to test -->
 	<target name="toolbox.deploy" depends="">
 		<!-- create the target directory under GATE_HOME/plugins -->
@@ -395,21 +460,26 @@ Build file for OpenSextantToolbox.
 
 		<!-- copy over the plugins dir from release -->
 		<copy todir="${toolbox.plugin.dir}">
-			<fileset dir="${release.dir}/plugins/OpenSextantToolbox"/>
+			<fileset dir="${release.dir}/plugins/OpenSextantToolbox" />
 		</copy>
-		
+
 		<!-- copy over the other jars libs from release -->
 		<copy todir="${toolbox.plugin.dir}/lib_extra">
 			<fileset dir="${release.dir}/lib/">
-				<include name = "*.jar" />
-				<exclude name= "**/GATE/**" />
+				<include name="*.jar" />
+				<exclude name="**/GATE/**" />
 			</fileset>
 			<fileset dir="${release.dir}/lib/solr">
-				<include name = "*.jar" />
+				<include name="*.jar" />
 			</fileset>
+			<fileset dir="${release.dir}/lib/Logging">
+				<include name="*.jar" />
+			</fileset>
+			
+			
 		</copy>
 
 		<echo> Remember to add -Dgate.class.path=./plugins/OpenSextantToolbox/lib_extra/* to your gate.l4j.ini or other start up script </echo>
-		
+
 	</target>
 </project>
